# mlops_project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  download_data.py  pyproject.toml  requirements.txt  tasks.py
.dvc/: config
.github/workflows/: tests.yaml  unittests.yaml
configs/: api_cloudbuild.yaml  cloudbuild.yaml  config.yaml  config_cpu.yaml  sweep.yaml  vertex_ai_train.yaml
data/: processed.dvc  raw.dvc
data/processed/: test_data.pkl.dvc  train_data.pkl.dvc
dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
docs/: mkdocs.yaml
reports/: README.md
src/mlops_project/: api.py  data.py  evaluate.py  model.py  train.py
tests/: test_api.py  test_data.py  test_model.py
wandb/: latest-run
wandb/run-20250119_114334-d7heu8ri/: run-d7heu8ri.wandb
wandb/run-20250119_114334-d7heu8ri/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20250119_115734-ceataawz/: run-ceataawz.wandb
wandb/run-20250119_115734-ceataawz/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/sweep-1yqlo5o6/: config-6nvtpso5.yaml  config-ceataawz.yaml  config-d7heu8ri.yaml
